--- a/css/introducao.css
+++ b/css/introducao.css
@@ -18,14 +18,14 @@
     max-width: 90%;
 }
 .introducao h1{
-    font-size: 4rem;
-    line-height: 1.125;
+    font-size: 3.6rem;
+    line-height: 1.25;
     color: white;
 }
 
 .introducao p{
     grid: 1;
-    color: white;
+    color: #2e323b;
     font-size: 1.5rem;
 
     
